--- a/css/styles.less
+++ b/css/styles.less
@@ -145,183 +145,29 @@ body, html {
             -webkit-flex-flow: row wrap;
             justify-content: center;
             line-height:30px;
-
-            .pi {
-                height: auto;
-                width: 350px;
-                margin: 5px;
-                text-align: center;
-                vertical-align: middle;
-                line-height: 200px;
-                overflow: hidden;
-                position: relative;
-                -moz-transition: all ease-in-out 250ms;
-                -o-transition: all ease-in-out 250ms;
-                -webkit-transition: all ease-in-out 250ms;
-                transition: all ease-in-out 250ms;
-
-                img {
-                    -webkit-filter: grayscale(100%);
-                    filter: grayscale(100%);
-                    max-width: 100%;
-
-                    &.dark_image {
-                      opacity: 0.7;
-                    }
-                }
-
-                .feature-overlay {
-                    position: absolute;
-                    top: 0;
-                    bottom: 0;
-                    right: 0;
-                    left: 0;
-                    -moz-transition: all ease-in-out 250ms;
-                    -o-transition: all ease-in-out 250ms;
-                    -webkit-transition: all ease-in-out 250ms;
-                    transition: all ease-in-out 250ms;
-                    background: rgba(0,0,0,0);
-
-                    .feature-info, .feature_background {
-                        position: relative;
-                        bottom: -200px;
-                        width: 100%;
-                        height: 100%;
-                        -moz-box-sizing: border-box;
-                        -webkit-box-sizing: border-box;
-                        box-sizing: border-box;
-                        -moz-transition: all ease-in-out 250ms;
-                        -o-transition: all ease-in-out 250ms;
-                        -webkit-transition: all ease-in-out 250ms;
-                        transition: all ease-in-out 250ms;
-                        padding: 7.5px;
-                        opacity: 1;
-
-                        h4 {
-                            color: #000;
-                            text-transform: uppercase;
-                            font-size: 24px;
-                            margin: 0 0 5px;
-                        }
-                        div {
-                            font-size: 13px;
-                            color: #000;
-                            line-height: 15px;
-
-                            a {
-                                color: #FFF;
-                                text-decoration: none;
-
-                                &:hover {
-                                    text-decoration: underline;
-                                    -webkit-tap-highlight-color: rgba(0,0,0,0);
-                                    -webkit-user-select: none;
-                                    -webkit-touch-callout: none;
-                                }
-                            }
-                        }
-                    }
-
-                    .feature_background {
-                        &.bw {
-                            background: #e22016;//rgba(226, 32, 22, 0.9);
-                        }
-                        &.rka {
-                            background: #ee3124; //rgba(238, 49, 36, 0.9);
-                        }
-                        &.hs {
-                            background: #3d822e; //rgba(61, 130, 46, 0.9);
-                        }
-                        &.vf {
-                            background: #005bab; //rgba(0 , 91, 171, 0.9);
-                        }
-                        &.yt {
-                            background: #dc1e37;
-                        }
-                        &.col {
-                            background: #e87722;
-                        }
-                        &.cub {
-                            background: #ffc82f;
-                        }
-                        &.ecom {
-                            background: #77bd1e;
-                        }
-                    }
-                }
-
-                &.circle {
-                    img {
-                        max-width: 150px;
-                    }
-                }
-
-                &:hover, &:focus {
-                    text-decoration: none;
-                    -webkit-tap-highlight-color: rgba(0,0,0,0);
-                    -webkit-user-select: none;
-                    -webkit-touch-callout: none;
-
-                    .feature-box-overlay {
-                        background: rgba(0,0,0,0.1);
-                    }
-
-                    .feature_background {
-                        bottom: 0;
-                        opacity: 0.7;
-                    }
-
-                    .feature-info {
-                        bottom: 200px;
-                    }
-
-                    img {
-                        -webkit-filter: grayscale(0);
-                        filter: grayscale(0);
-
-                        &.dark_image {
-                          opacity: 1;
-                        }
-                    }
-                }
-            }
         }
     }
 
-    .footer {
-        background: repeating-linear-gradient(45deg, #111, #111 50px, #222 50px, #222 100px);
-        ul {
-            list-style: none;
+    #contact {
+      background: url('../images/location.jpg') no-repeat center;
+      background-size: cover;
+      color: #FFF;
 
-            li {
-                display: inline-block;
-                margin: 0 20px;
-                font-size: 50px;
-            }
-        }
-        a {
-            color: #000;
+      .overlay_filter {
+        background: rgba(0,0,0,0.7);
+        width: 100%;
+        height: auto;
+        .container {
+          .col-md-4 {
             span {
-                display: none;
             }
-            &.linkedin:hover, &.linkedin.hover_effect {
-                color: rgba(81, 127, 164, 1);
-
-                span {
-                    display: inline-block;
-                    animation: slideInDown ease-in;
-                }
-            }
-            &.facebook:hover, &.facebook.hover_effect {
-                color: rgba(59, 89, 152, 1);
-            }
-            &.twitter:hover, &.twitter.hover_effect {
-                color: rgba(0, 172, 237, 1);
-            }
-            &.google:hover, &.google.hover_effect {
-                color: rgba(221, 75, 57, 1);
-            }
+          }
+          a {
+            text-decoration: none;
+            color: #fff;
+          }
         }
+      }
     }
 }
 
@@ -457,7 +303,100 @@ body, html {
     }
 }
 
-@media (min-width: 768px) {
+@media @mobile {
+    .portfolio_work {
+      .pi {
+          height: auto;
+          width: 100%;
+          margin: 30px 5px;
+          text-align: center;
+          vertical-align: middle;
+          line-height: 200px;
+          overflow: hidden;
+          position: relative;
+          -moz-transition: all ease-in-out 250ms;
+          -o-transition: all ease-in-out 250ms;
+          -webkit-transition: all ease-in-out 250ms;
+          transition: all ease-in-out 250ms;
+
+          .pi_logo_image {
+            height: 100%;
+            vertical-align: middle;
+            width: 33%;
+            float: left;
+            display: inline-block;
+
+              .logo_image {
+                  width: 80%;
+                  display: inline-block;
+              }
+          }
+
+          .feature-overlay {
+            width: 66%;
+            display: inline-block;
+
+              .feature_background {
+                display: none;
+              }
+
+              .feature-info {
+                height: 100%;
+                  h4 {
+                      color: #000;
+                      text-transform: uppercase;
+                      font-size: 24px;
+                      margin: 0 0 5px;
+                  }
+                  div {
+                      font-size: 13px;
+                      color: #000;
+                      line-height: 15px;
+
+                      a {
+                          color: #FFF;
+                          text-decoration: none;
+                      }
+                  }
+              }
+          }
+      }
+    }
+
+    .footer {
+        background: repeating-linear-gradient(45deg, #111, #111 50px, #222 50px, #222 100px);
+        ul {
+            list-style: none;
+            padding-top: 10px;
+
+            li {
+                display: inline-block;
+                margin: 0 20px;
+                font-size: 2.2em;
+            }
+        }
+        a {
+            color: #FFF;
+            span {
+                display: none;
+            }
+            &.linkedin {
+                color: rgba(81, 127, 164, 1);
+            }
+            &.facebook {
+                color: rgba(59, 89, 152, 1);
+            }
+            &.twitter {
+                color: rgba(0, 172, 237, 1);
+            }
+            &.google {
+                color: rgba(221, 75, 57, 1);
+            }
+        }
+    }
+}
+
+@media @desktop {
     nav {
         z-index: 999;
         top: 0;
@@ -507,6 +446,183 @@ body, html {
 
             .navbar-toggle {
                 display: none !important;
+            }
+        }
+    }
+
+    .pi {
+        height: auto;
+        width: 350px;
+        margin: 5px;
+        text-align: center;
+        vertical-align: middle;
+        line-height: 200px;
+        overflow: hidden;
+        position: relative;
+        -moz-transition: all ease-in-out 250ms;
+        -o-transition: all ease-in-out 250ms;
+        -webkit-transition: all ease-in-out 250ms;
+        transition: all ease-in-out 250ms;
+
+        img {
+            -webkit-filter: grayscale(100%);
+            filter: grayscale(100%);
+            max-width: 100%;
+
+            &.dark_image {
+              opacity: 0.7;
+            }
+        }
+
+        .feature-overlay {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            -moz-transition: all ease-in-out 250ms;
+            -o-transition: all ease-in-out 250ms;
+            -webkit-transition: all ease-in-out 250ms;
+            transition: all ease-in-out 250ms;
+            background: rgba(0,0,0,0);
+
+            .feature-info, .feature_background {
+                position: relative;
+                bottom: -200px;
+                width: 100%;
+                height: 100%;
+                -moz-box-sizing: border-box;
+                -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+                -moz-transition: all ease-in-out 250ms;
+                -o-transition: all ease-in-out 250ms;
+                -webkit-transition: all ease-in-out 250ms;
+                transition: all ease-in-out 250ms;
+                padding: 7.5px;
+                opacity: 1;
+
+                h4 {
+                    color: #000;
+                    text-transform: uppercase;
+                    font-size: 24px;
+                    margin: 0 0 5px;
+                }
+                div {
+                    font-size: 13px;
+                    color: #000;
+                    line-height: 15px;
+
+                    a {
+                        color: #FFF;
+                        text-decoration: none;
+
+                        &:hover {
+                            text-decoration: underline;
+                            -webkit-tap-highlight-color: rgba(0,0,0,0);
+                            -webkit-user-select: none;
+                            -webkit-touch-callout: none;
+                        }
+                    }
+                }
+            }
+
+            .feature_background {
+                &.bw {
+                    background: #e22016;//rgba(226, 32, 22, 0.9);
+                }
+                &.rka {
+                    background: #ee3124; //rgba(238, 49, 36, 0.9);
+                }
+                &.hs {
+                    background: #3d822e; //rgba(61, 130, 46, 0.9);
+                }
+                &.vf {
+                    background: #005bab; //rgba(0 , 91, 171, 0.9);
+                }
+                &.yt {
+                    background: #dc1e37;
+                }
+                &.col {
+                    background: #e87722;
+                }
+                &.cub {
+                    background: #ffc82f;
+                }
+                &.ecom {
+                    background: #77bd1e;
+                }
+            }
+        }
+
+        &.circle {
+            img {
+                max-width: 150px;
+            }
+        }
+
+        &:hover, &:focus {
+            text-decoration: none;
+            -webkit-tap-highlight-color: rgba(0,0,0,0);
+            -webkit-user-select: none;
+            -webkit-touch-callout: none;
+
+            .feature-box-overlay {
+                background: rgba(0,0,0,0.1);
+            }
+
+            .feature_background {
+                bottom: 0;
+                opacity: 0.7;
+            }
+
+            .feature-info {
+                bottom: 200px;
+            }
+            .pi_logo_image {
+                .logo_image {
+                    -webkit-filter: grayscale(0);
+                    filter: grayscale(0);
+
+                    &.dark_image {
+                      opacity: 1;
+                    }
+                }
+            }
+        }
+    }
+
+    .footer {
+        background: repeating-linear-gradient(45deg, #111, #111 50px, #222 50px, #222 100px);
+        ul {
+            list-style: none;
+
+            li {
+                display: inline-block;
+                margin: 0 20px;
+                font-size: 50px;
+            }
+        }
+        a {
+            color: #FFF;
+            span {
+                display: none;
+            }
+            &.linkedin:hover, &.linkedin.hover_effect {
+                color: rgba(81, 127, 164, 1);
+
+                span {
+                    display: inline-block;
+                    animation: slideInDown ease-in;
+                }
+            }
+            &.facebook:hover, &.facebook.hover_effect {
+                color: rgba(59, 89, 152, 1);
+            }
+            &.twitter:hover, &.twitter.hover_effect {
+                color: rgba(0, 172, 237, 1);
+            }
+            &.google:hover, &.google.hover_effect {
+                color: rgba(221, 75, 57, 1);
             }
         }
     }
