--- a/css/variables.less
+++ b/css/variables.less
@@ -4,6 +4,8 @@
 @lg: ~"(min-width: 768px) and (max-width:991px)";
 @xl: ~"(min-width: 992px)";
 @xxl: ~"(min-width: 1200px)";
+@mobile: ~"(min-width:320px) and (max-width:767px)";
+@desktop: ~"(min-width: 768px)";
 
 @keyframes bounceIn {
   0% {
