--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,7 @@ html {
   width: 100%;
   height: 100%;
   min-height: 100%;
-  font-family: 'PT Sans', Arial, Helvetica, Verdana, sans-serif;
+  font-family: 'Lato', 'PT Sans', Arial, Helvetica, Verdana, sans-serif;
 }
 .centered {
   text-align: center;
@@ -439,6 +439,7 @@ html {
   .footer ul {
     list-style: none;
     padding-top: 10px;
+    padding-left: 0;
   }
   .footer ul li {
     display: inline-block;
@@ -462,6 +463,9 @@ html {
   }
   .footer a.google {
     color: #dd4b39;
+  }
+  .footer a.steam {
+    color: #D6D6D6;
   }
 }
 @media (min-width: 768px) {
@@ -657,25 +661,19 @@ html {
   .footer a span {
     display: none;
   }
-  .footer a.linkedin:hover,
-  .footer a.linkedin.hover_effect {
+  .footer a.linkedin:hover {
     color: #517fa4;
   }
-  .footer a.linkedin:hover span,
-  .footer a.linkedin.hover_effect span {
-    display: inline-block;
-    animation: slideInDown ease-in;
-  }
-  .footer a.facebook:hover,
-  .footer a.facebook.hover_effect {
+  .footer a.facebook:hover {
     color: #3b5998;
   }
-  .footer a.twitter:hover,
-  .footer a.twitter.hover_effect {
+  .footer a.twitter:hover {
     color: #00aced;
   }
-  .footer a.google:hover,
-  .footer a.google.hover_effect {
+  .footer a.google:hover {
     color: #dd4b39;
+  }
+  .footer a.steam:hover {
+    color: #D6D6D6;
   }
 }
