--- a/css/styles.less
+++ b/css/styles.less
@@ -13,7 +13,7 @@ body, html {
     width: 100%;
     height: 100%;
     min-height: 100%;
-    font-family: 'PT Sans', Arial, Helvetica, Verdana, sans-serif;
+    font-family: 'Lato', 'PT Sans', Arial, Helvetica, Verdana, sans-serif;
 }
 
 .centered {
@@ -368,6 +368,7 @@ body, html {
         ul {
             list-style: none;
             padding-top: 10px;
+            padding-left: 0;
 
             li {
                 display: inline-block;
@@ -391,6 +392,9 @@ body, html {
             }
             &.google {
                 color: rgba(221, 75, 57, 1);
+            }
+            &.steam {
+                color: #D6D6D6;
             }
         }
     }
@@ -607,22 +611,20 @@ body, html {
             span {
                 display: none;
             }
-            &.linkedin:hover, &.linkedin.hover_effect {
+            &.linkedin:hover {
                 color: rgba(81, 127, 164, 1);
-
-                span {
-                    display: inline-block;
-                    animation: slideInDown ease-in;
-                }
             }
-            &.facebook:hover, &.facebook.hover_effect {
+            &.facebook:hover {
                 color: rgba(59, 89, 152, 1);
             }
-            &.twitter:hover, &.twitter.hover_effect {
+            &.twitter:hover {
                 color: rgba(0, 172, 237, 1);
             }
-            &.google:hover, &.google.hover_effect {
+            &.google:hover {
                 color: rgba(221, 75, 57, 1);
+            }
+            &.steam:hover {
+                color: #D6D6D6;
             }
         }
     }
